--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
 # render.yaml - Render deployment configuration
 services:
-  - type: web
+  - type: worker
     name: meitav-bot
     env: docker
     plan: free
-    healthCheckPath: /health
     envVars:
       - key: TELEGRAM_TOKEN
         sync: false
